crates/stylex-shared/tests/transform_stylex_define_consts_test/snapshots/fold__transform_stylex_define_consts_test__define_consts__adds_media_query_placeholder_from_constants_stylex.snap
---
source: crates/stylex-shared/tests/transform_stylex_define_consts_test/define_consts.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { breakpoints } from './input.stylex';
export const styles = {
    root: {
        kMwMTN: "x1e2nbdu x1h416lx",
        $$css: true
    }
};
