crates/stylex-shared/tests/transform_stylex_define_consts_test/snapshots/fold__transform_stylex_define_consts_test__define_consts__adds_nested_media_query_placeholders_from_constants_stylex.snap
---
source: crates/stylex-shared/tests/transform_stylex_define_consts_test/define_consts.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { breakpoints, colors } from './input.stylex';
export const styles = {
    root: {
        kMwMTN: "x1mqxbix xsh01xf xui6vf",
        $$css: true
    }
};
