crates/stylex-shared/tests/transform_stylex_define_consts_test/snapshots/fold__transform_stylex_define_consts_test__define_consts__adds_placeholder_for_constant_value_from_constants_stylex.snap
---
source: crates/stylex-shared/tests/transform_stylex_define_consts_test/define_consts.rs
expression: output
---
import * as stylex from '@stylexjs/stylex';
import { colors } from './input.stylex';
export const styles = {
    root: {
        kWkggS: "xuj838i",
        $$css: true
    }
};
